@@ -1,8 +1,8 @@
 ;----------------------------------------------------------------------------
 ;
 ; $Source: /usr/local/cvsroot/gccsdk/unixlib/source/gcccompat/_moddi3.s,v $
-; $Date: 2001/01/29 15:10:19 $
-; $Revision: 1.2 $
+; $Date: 2002/09/24 21:02:37 $
+; $Revision: 1.3 $
 ; $State: Exp $
 ; $Author: admin $
 ;
@@ -17,9 +17,8 @@
 
 	AREA	|C$$code|, CODE, READONLY
 
-	; (a1, a2) / (a3, a4)
-	;   result in v2 and v3
-	;   remainder in v4 and ip
+	; (a1, a2) % (a3, a4)
+	; result in a1 and a2
 	EXPORT |__moddi3|
 	NAME	__moddi3
 |__moddi3|
