@@ -1,8 +1,8 @@
 ;----------------------------------------------------------------------------
 ;
 ; $Source: /usr/local/cvsroot/gccsdk/unixlib/source/gcccompat/_udivdi3.s,v $
-; $Date: 2001/01/29 15:10:19 $
-; $Revision: 1.2 $
+; $Date: 2002/09/24 21:02:37 $
+; $Revision: 1.3 $
 ; $State: Exp $
 ; $Author: admin $
 ;
@@ -17,8 +17,8 @@
 	AREA	|C$$code|, CODE, READONLY
 
 	; (a1, a2) / (a3, a4)
-   	; result in v2 and v3
-   	; remainder in v4 and ip
+   	; result in a1 and a2
+   	; remainder in a3 and a4
 	EXPORT |__udivdi3|
 	NAME	__udivdi3
 |__udivdi3|
@@ -59,6 +59,8 @@
 	BGE	|__udivdi3.division|
 	MOV	a1, v2
 	MOV	a2, v3
+	MOV	a3, v4
+	MOV	a4, ip
 	stackreturn	AL, "v2, v3, v4, pc"
 
 	END
